# build

./: LICENSE.md  README.md  WORKSPACE
sysroot/: BUILD.bazel
sysroot/scripts/: update.sh~
sysroots/: BUILD.bazel
sysroots/debian_sid_amd64-sysroot/: BUILD.bazel
sysroots/scripts/: install-sysroot.py  update.sh
ubuntu_20_04_bazel_with_cc_toolchain/: Dockerfile
ubuntu_20_04_cargo_raze/: Dockerfile
