platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

filegroup(
    name = "amd64_sysroot",
    srcs = glob(["debian_sid_amd64-sysroot/**/*"])
)

filegroup(
    name = "arm64_sysroot",
    srcs = glob(["debian_sid_arm64-sysroot/**/*"])
)

alias(
    name = "sysroot",
    actual = select({
        ":linux_x86_64": ":amd64_sysroot",
        ":linux_aarch64": ":arm64_sysroot",
    }),
)
